Index and refactoring

--- a/ambit verd/Views/Home/Index.cshtml
+++ b/ambit verd/Views/Home/Index.cshtml
@@ -1,12 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = Ambit_Verd.Resources.Layout.Name;
 }
 
 <div>
-    Change the Language:
-
-    <ul>
-        <li> @Html.ActionLink("Spanish", "Change", "Home", new { Lang = "es" }, null)</li>
-        <li> @Html.ActionLink("English", "Change", "Home", new { Lang = "en" }, null)</li>
-    </ul>
+    <img width="100%" src="~/Content/img/home.jpg"/>
 </div>
