Index with Styles (sass), and translations

--- a/ambit verd/Views/Shared/Partials/_footer.cshtml
+++ b/ambit verd/Views/Shared/Partials/_footer.cshtml
@@ -1,6 +1,10 @@
-﻿<footer class="blog-footer">
-    <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo"></a>.</p>
-    <p>
-        <a href="#">Back to top</a>
-    </p>
+﻿<footer class="text-muted py-3 bg-color">
+    <div class="container mt-3">
+        <label class="float-right">
+            <a href="#">Back to top</a>
+        </label>
+        <label>
+            ©Àmbit Verd Serveis Integrals de Jardineria S.L. · Puigcerdà · Tel 667 554 059 · info@ambitverd.com 
+        </label>
+    </div>
 </footer>
