--- a/ambit verd/Views/Shared/Partials/_navbar.cshtml
+++ b/ambit verd/Views/Shared/Partials/_navbar.cshtml
@@ -8,10 +8,10 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">@Ambit_Verd.Resources.Layout.Inicio </a>
+                        <a class="nav-link" href="/">@Ambit_Verd.Resources.Layout.Inicio </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">@Ambit_Verd.Resources.Layout.Servicios </a>
+                        <a class="nav-link" href="home/services">@Ambit_Verd.Resources.Layout.Servicios </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">@Ambit_Verd.Resources.Layout.Proyectos </a>
