Push to main: Imgs, new views and content

--- a/ambit verd/Views/Home/Index.cshtml
+++ b/ambit verd/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                     <hr class="featurette-divider my-1" />
                     <p class="lead">And an even wittier subheading.</p>
                 </div>
-                <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+                <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-1.jpg"/>
             </div>
             <div class="w-50  mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
                 <div class="my-3 p-3">
@@ -33,7 +33,7 @@
                     <hr class="featurette-divider my-1" />
                     <p class="lead">And an even wittier subheading.</p>
                 </div>
-                <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+                <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-2.png" />
             </div>
         </div>
         <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
@@ -43,7 +43,7 @@
                     <hr class="featurette-divider my-1" />
                     <p class="lead">And an even wittier subheading.</p>
                 </div>
-                <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+                <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-3.png" />
             </div>
             <div class="w-50  mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
                 <div class="my-3 p-3">
@@ -51,7 +51,7 @@
                     <hr class="featurette-divider my-1" />
                     <p class="lead">And an even wittier subheading.</p>
                 </div>
-                <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+                <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-4.jpg" />
             </div>
         </div>
     </div>
