--- a/ambit verd/Views/Shared/Partials/_navbar.cshtml
+++ b/ambit verd/Views/Shared/Partials/_navbar.cshtml
@@ -11,21 +11,21 @@
                         <a class="nav-link" href="/">@Ambit_Verd.Resources.Layout.Inicio </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="home/services">@Ambit_Verd.Resources.Layout.Servicios </a>
+                        <a class="nav-link" href="/home/services">@Ambit_Verd.Resources.Layout.Servicios </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">@Ambit_Verd.Resources.Layout.Proyectos </a>
+                        <a class="nav-link" href="/home/projects">@Ambit_Verd.Resources.Layout.Proyectos </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">@Ambit_Verd.Resources.Layout.Quienes_Somos </a>
+                        <a class="nav-link" href="/home/WhoWeAre">@Ambit_Verd.Resources.Layout.Quienes_Somos </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">@Ambit_Verd.Resources.Layout.Contacto </a>
+                        <a class="nav-link" href="/home/Contact">@Ambit_Verd.Resources.Layout.Contacto </a>
                     </li>
                 </ul>
                 <span class="navbar-text">
                     @Html.ActionLink("Spanish", "Change", "Home", new { Lang = "es" }, new { @class = "flag-icon-sp" })
-                    @Html.ActionLink("Catalan", "Change", "Home", new { Lang = "ca" }, new { @class = "flag-icon-fr" })
+                    @Html.ActionLink("Catalan", "Change", "Home", new { Lang = "ca" }, new { @class = "flag-icon-cat" })
                     @Html.ActionLink("Catalan", "Change", "Home", new { Lang = "fr" }, new { @class = "flag-icon-fr" })
                 </span>
             </div>
