--- a/ambit verd/Content/css/Layout.css
+++ b/ambit verd/Content/css/Layout.css
@@ -1,4 +1,8 @@
-﻿.bg-color {
+﻿.container {
+    max-width: 1198px !important;
+}
+
+.bg-color {
     background-color: #f7f7f7;
 }
 
@@ -11,6 +15,13 @@
 
 .flag-icon-fr {
     background: url("../img/flag-fr.png") no-repeat;
+    background-size: 25px;
+    color: transparent !important;
+    padding: 2px;
+}
+
+.flag-icon-cat {
+    background: url("../img/flag-cat.png") no-repeat;
     background-size: 25px;
     color: transparent !important;
     padding: 2px;
