Push to Main: New stylesheets for the views, new footer 'Create by Alejandro', and the content for the Contact's view

--- a/ambit verd/Content/css/Layout.css
+++ b/ambit verd/Content/css/Layout.css
@@ -27,3 +27,8 @@
     padding: 2px;
 }
 
+.footer-created-by-AJimenez {
+    width: 100%;
+    background-color: #f7f7f7;
+    text-align: center;
+}
