--- a/ambit verd/Views/Shared/Partials/_footer.cshtml
+++ b/ambit verd/Views/Shared/Partials/_footer.cshtml
@@ -7,4 +7,8 @@
             ©Àmbit Verd Serveis Integrals de Jardineria S.L. · Puigcerdà · Tel 667 554 059 · info@ambitverd.com 
         </label>
     </div>
+    <div class="footer-created-by-AJimenez">
+        <strong> Created by Alejandro Jiménez  </strong> (  Linkedin  )   (  Github  )  (  Mail  )  (  Mi Web  )
+
+    </div>
 </footer>
