Push to Main: Fix Projects, and Contacts

--- a/ambit verd/Views/Home/Contact.cshtml
+++ b/ambit verd/Views/Home/Contact.cshtml
@@ -13,13 +13,12 @@
         <source src="~/Content/img/grass-move.mp4" type="video/mp4">
     </video>
     <div class="text-video">
-            <h3 class="row font-weight-bold"> CONTACTO: </h3>
-            <label class="row"> Puede contactar con nosotros a través de: </label>
-            <label class="row"> ICONO TELF - 667 554 059</label>
-            <label class="row"> ICONO EMAIL - info@ambitverd.com </label>
-            <label class="row"> ICONO TWITER - Ambit Verd </label>
-            <label class="row"> ICONO INSTAGRAM - info@ambitverd.com </label>
+            <h2 class="row font-weight-bold"> CONTACTO: </h2>
+            <h5 class="row mb-5"> Puede contactar con nosotros a través de: </h5>
+            <label class="row"> <img src="~/Content/img/contact/telefono.png" class="mr-4"/> 667 554 059</label>
+            <label class="row"> <img src="~/Content/img/contact/email.png" class="mr-4"/> info@ambitverd.com </label>
+            <label class="row"> <img src="~/Content/img/contact/twitter.png" class="mr-4"/> <a href="https://twitter.com/Ambit_Verd" target="_blank"> Twitter Ambit Verd </a> </label>
+            <label class="row"> <img src="~/Content/img/contact/instagram.png" class="mr-4"/> <a href="https://www.instagram.com/ambit_verd/?hl=es" target="_blank"> Instagram Ambit Verd </a> </label>
     </div>
-
 </div>
 
