--- a/ambit verd/Views/Home/WhoWeAre.cshtml
+++ b/ambit verd/Views/Home/WhoWeAre.cshtml
@@ -3,5 +3,17 @@
     ViewBag.Title = "WhoWeAre";
 }
 
-<h2>WhoWeAre</h2>
+
+<div class="container">
+
+    <label class="mt-5">
+        Àmbit Verd es una empresa de obras y servicios integrales de jardinería comprometidos con ofrecer a nuestros clientes y empresas las mejores soluciones a sus necesidades en cualquier aspecto relacionado con jardines y espacios verdes.
+
+        Ubicados en Puigcerdà prestamos nuestros servicios principalmente en la zona de la Cerdaña catalana y francesa. En  Àmbit Verd realizamos trabajos de jardinería en cualquier zona y terreno, prestando servicios a particulares, comunidades de vecinos, empresas y organismos oficiales.
+
+        Nuestros servicios ofrecen soluciones integrales de jardinería en todas las áreas relacionadas con la jardinería, el paisajismo y los espacios verdes, desde el diseño y la ejecución hasta el mantenimiento.
+
+    </label>
+</div>
+
 
