--- a/ambit verd/Views/Shared/Partials/_footer.cshtml
+++ b/ambit verd/Views/Shared/Partials/_footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<footer class="text-muted py-3 bg-color">
-    <div class="container mt-3">
+    <div class="container mt-3 text-center">
         <label class="float-right">
             <a href="#">Back to top</a>
         </label>
@@ -8,7 +8,18 @@
         </label>
     </div>
     <div class="footer-created-by-AJimenez">
-        <strong> Created by Alejandro Jiménez  </strong> (  Linkedin  )   (  Github  )  (  Mail  )  (  Mi Web  )
-
-    </div>
+        <strong> Created by Alejandro Jiménez  </strong>
+        <a href="https://es.linkedin.com/in/alejandro-jimenez-regalon" target="_blank"> 
+            <img src="~/Content/img/footer/linkedin.png" class="mx-2" width="25" alt="Linkedin de Alejandro Jiménez" /> 
+        </a>
+        <a href="https://github.com/alejimenezgit/" target="_blank">
+            <img src="~/Content/img/footer/github.png" class="mx-2" width="25" alt="Github de Alejandro Jiménez" />
+        </a>
+        <a href="mailto:alejimreg@gmail.com" target="_blank">
+            <img src="~/Content/img/footer/email.png" class="mx-1" width="25" alt="Email de Alejandro Jiménez" />
+        </a>
+        <a href="" target="_blank">
+            <img src="~/Content/img/footer/web.png" class="mx-2" width="25" alt="Web de Alejandro Jiménez" />
+        </a>
+</div>
 </footer>
