--- a/ambit verd/Views/Home/Services.cshtml
+++ b/ambit verd/Views/Home/Services.cshtml
@@ -5,6 +5,9 @@
 
 
 <div class="container mt-5">
+    <h1 class="font-weight-bold text-center mt-5"> Servicios </h1>
+    <hr class="featurette-divider mb-5 mt-4" />
+
     <div class="row featurette mt-5">
         <div class="col-md-7">
             <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
