--- a/ambit verd/Views/Home/Contact.cshtml
+++ b/ambit verd/Views/Home/Contact.cshtml
@@ -14,8 +14,8 @@
     </video>
     <div class="text-video">
             <h2 class="row font-weight-bold"> CONTACTO: </h2>
-            <h5 class="row mb-5"> Puede contactar con nosotros a través de: </h5>
-            <label class="row"> <img src="~/Content/img/contact/telefono.png" class="mr-4"/> 667 554 059</label>
+            <h5 class="row mb-4"> Puede contactar con nosotros a través de: </h5>
+            <label class="row mt-2"> <img src="~/Content/img/contact/telefono.png" class="mr-4"/> 667 554 059</label>
             <label class="row"> <img src="~/Content/img/contact/email.png" class="mr-4"/> info@ambitverd.com </label>
             <label class="row"> <img src="~/Content/img/contact/twitter.png" class="mr-4"/> <a href="https://twitter.com/Ambit_Verd" target="_blank"> Twitter Ambit Verd </a> </label>
             <label class="row"> <img src="~/Content/img/contact/instagram.png" class="mr-4"/> <a href="https://www.instagram.com/ambit_verd/?hl=es" target="_blank"> Instagram Ambit Verd </a> </label>
