--- a/ambit verd/Views/Home/Index.cshtml
+++ b/ambit verd/Views/Home/Index.cshtml
@@ -21,37 +21,37 @@
         <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
             <div class="w-50  mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
                 <div class="my-3 p-3">
-                    <h2 class="display-5"> @Ambit_Verd.Resources.Layout.Servicios </h2>
+                    <a href="/home/services"> <h2 class="display-5 c-black"> @Ambit_Verd.Resources.Layout.Servicios </h2> </a>
                     <hr class="featurette-divider my-1" />
                     <p class="lead">And an even wittier subheading.</p>
                 </div>
-                <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-1.jpg"/>
+                <a href="/home/services"> <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-1.jpg" /> </a>
             </div>
             <div class="w-50  mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
                 <div class="my-3 p-3">
-                    <h2 class="display-5"> @Ambit_Verd.Resources.Layout.Proyectos </h2>
+                    <a href="/home/projects"> <h2 class="display-5 c-black"> @Ambit_Verd.Resources.Layout.Proyectos </h2> </a>
                     <hr class="featurette-divider my-1" />
                     <p class="lead">And an even wittier subheading.</p>
                 </div>
-                <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-2.png" />
+                <a href="/home/projects"> <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-2.png" /> </a>
             </div>
         </div>
         <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
             <div class="w-50  mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
                 <div class="my-3 p-3">
-                    <h2 class="display-5"> @Ambit_Verd.Resources.Layout.Quienes_Somos </h2>
+                    <a href="/home/WhoWeAre"> <h2 class="display-5 c-black"> @Ambit_Verd.Resources.Layout.Quienes_Somos </h2> </a>
                     <hr class="featurette-divider my-1" />
                     <p class="lead">And an even wittier subheading.</p>
                 </div>
-                <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-3.png" />
+                <a href="/home/WhoWeAre"> <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-3.png" /> </a>
             </div>
             <div class="w-50  mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
                 <div class="my-3 p-3">
-                    <h2 class="display-5"> @Ambit_Verd.Resources.Layout.Contacto </h2>
+                    <a href="/home/Contact"> <h2 class="display-5 c-black"> @Ambit_Verd.Resources.Layout.Contacto </h2> </a>
                     <hr class="featurette-divider my-1" />
                     <p class="lead">And an even wittier subheading.</p>
                 </div>
-                <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-4.jpg" />
+                <a href="/home/Contact"> <img class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;" src="~/Content/img/index-4.jpg" /> </a>
             </div>
         </div>
     </div>
