--- a/ambit verd/Content/css/WhoWeAre.css
+++ b/ambit verd/Content/css/WhoWeAre.css
@@ -1,3 +1,3 @@
-﻿.featurette-divider {
-  background: #6abb3d;
-  height: 2px; }
+﻿.img-icon {
+  margin-left: 50%;
+  transform: translate(-50%, -50%); }
