MAIN: Send Email

--- a/ambit verd/Views/Home/Index.cshtml
+++ b/ambit verd/Views/Home/Index.cshtml
@@ -15,7 +15,6 @@
             <div class="button__vertical"></div>
         </button>
     </div>
-        
 
     <div class="container">
         <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
@@ -57,29 +56,4 @@
     </div>
 </div>
 
-
-
-<!-- The Modal -->
-<div class="modal fade" id="myModal">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-
-            <!-- Modal Header -->
-            <div class="modal-header">
-                <h4 class="modal-title">Modal Heading</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
-
-            <!-- Modal body -->
-            <div class="modal-body">
-                Modal body..
-            </div>
-
-            <!-- Modal footer -->
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-
-        </div>
-    </div>
-</div>
+@Html.Partial("~/Views/Shared/Partials/_modal.cshtml")
